src/test/rustdoc-ui/intra-doc/anchors.stderr
error: `Foo::f#hola` contains an anchor, but links to fields are already anchored
  --> $DIR/anchors.rs:25:15
   |
LL | /// Or maybe [Foo::f#hola].
   |               ^^^^^^^^^^^ contains invalid anchor
   |
note: the lint level is defined here
  --> $DIR/anchors.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: `hello#people#!` contains multiple anchors
  --> $DIR/anchors.rs:31:28
   |
LL | /// Another anchor error: [hello#people#!].
   |                            ^^^^^^^^^^^^^^ contains invalid anchor

error: `Enum::A#whatever` contains an anchor, but links to variants are already anchored
  --> $DIR/anchors.rs:37:28
   |
LL | /// Damn enum's variants: [Enum::A#whatever].
   |                            ^^^^^^^^^^^^^^^^ contains invalid anchor

error: `u32#hello` contains an anchor, but links to builtin types are already anchored
  --> $DIR/anchors.rs:43:6
   |
LL | /// [u32#hello]
   |      ^^^^^^^^^ contains invalid anchor

error: aborting due to 4 previous errors

